2013-11-24  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* removed jquery  library imagareaselect for next TER release
	* uploaded the individual ext icon

2013-11-21  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* testing of yesterdays changes
	* debugging of link generation for the usemap areas
	* erased the functionality for generating the href param in 
	  AdventcalendarController
	* simplyfied the typoscript setup for the new page type
	* deleted the unnecessary domain model
	* copied the manual fro mthe old extension to have a base for the changes

2013-11-20  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* some general code refactoring
	* links for the usemap areas are now generated in fluid

2013-11-18  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* using the assigned values from flexform in main javascript
	* implemented the first steps towards ajax functionality (Dispatcher and 
	  Controller)
	* included setup.txt with typoscript defintion for special page type for 
	  the html output of the wicket content

2013-11-15  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* assigned all necessay data for jquery into an json encoded string and 
	  output it in a hidden field in list view
	* retrieving this json string in jquery and decode it (has to be tested)

2013-11-14  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* added new folder Resources/Public/Images 
	* copied image assets from old extension
	* added jquery code for opening the dialog box of the wickets (but with 
	  hardcoded variables at this time)

2013-11-13  Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V2.0.0

	* included the right behaviour for the href params of the area tags 
	  depending on selected ajax usage or not
	* included local jquery library as fallback for ext t3jquery