@@ -3,7 +3,11 @@
 	<f:image src="{adventcalendar.background.image}" alt="{adventcalendar.background.altText}" width="{adventcalendar.background.imageWidth}" usemap="#{adventcalendar.usemapData.usemap}" />
 	<map name="{adventcalendar.usemapData.usemap}" id="{adventcalendar.usemapData.usemap}">
 		<f:for each="{adventcalendar.usemapData.imageMapAreas}" as="area">
-			<area shape="{area.shape}" coords="{area.coords}"  href="{f:uri.page(pageUid:'{area.id}')}" id="{area.id}" alt="{area.alt}" />
+			
+			<f:if condition="{f:uri.page(pageUid:'{area.id}')}">
+				<area shape="{area.shape}" coords="{area.coords}" href="{f:uri.page(pageUid:'{area.id}')}" id="{area.id}" alt="{area.alt}" />
+			</f:if>
+			
 		</f:for>
 	</map>
 	<input type="hidden" value="{adventcalendar.jQuery.serializedData}" id="serializedjquerydata" />
